static/css/timetable/timetable.css
/* ... */
.drag-text
{
    font-size:10px;
    line-height:9px;
    margin:4px 0px 4px 0px;
    text-align:center;
    color:#FFFFFF;
    pointer-events:auto;
    cursor:pointer;
}

.drag-text:hover
{
    color:#dddddd;
}

.drag-close
{
    background: url(/media/icons/delete_lecture.svg) no-repeat center center;
    width:8px;
    height:8px;
    top:4px;
    right:4px;
    position:absolute;
    pointer-events:auto;
    cursor:pointer;
}

.drag-close:hover
{
    background: url(/media/icons/delete_lecture_hover.svg) no-repeat center center;
}

.drag-icon
{
    background: url(/media/icons/drag_add.svg) no-repeat center center;
    width:7px;
    height:9px;
    margin-right:4px;
    display:inline-block;
    vertical-align:top;
}

.drag-text:hover > .drag-icon
{
    background-image: url(/media/icons/drag_add_hover.svg);
}





/* Map at right side */

#map
{
    padding-bottom:10px;
    border-bottom:1px solid #EDD1DC;
    flex:0 0 auto;
}

#map-container
{
    position:relative;
    border:1px;
}

#map-img
{
    width:100%;
}

.map-location
{
    position:absolute;
    margin-left:-5px;
    margin-top:calc(0.7vh - 19px);
    margin-right:-100px;
}

.map-location-box
{
    background-color:#eeeeee;
    font-size:0;
    height:calc(0.7vh + 6px);
    border-radius:2px;
    padding:2px 3px;
    box-shadow:0em 1px 0px 0em #888888;
}
.map-location-box.active
{
    background-color:#f9f0f0;
}

.map-location-text
{
    font-size:calc(0.7vh + 3px);
    line-height:calc(0.7vh + 2px);
    margin-right:1px;
}
.map-location-box.active .map-location-text
{
    color:#e64c65;
}

.map-location-arrow
{
    position:relative;
    top:-3px;
    left:3px;
    width:0;
    height:0;
    border-left:2px solid transparent;
    border-right:2px solid transparent;
    border-top:3px solid #eeeeee;
}
.map-location-box.active~.map-location-arrow
{
    border-top-color:#f9f0f0;
}

.map-location-arrow-shadow
{
    position:relative;
    top:1px;
    left:3px;
    width:0;
    height:0;
    border-left:2px solid transparent;
    border-right:2px solid transparent;
    border-top:3px solid #888888;
}

.map-location-circle
{
    display:inline-block;
    width:calc(0.7vh + 2px);
    height:calc(0.7vh + 2px);
    margin-left:1px;
    border-radius:50%;
    background-color:#ff8888;
}
.map-location-circle.active
{
    background-color:#e64c65 !important;
}

.map-location-circle.color1
{
    background-color: #ef9e9e;
}
.map-location-circle.color2
{
    background-color: #f27e7e;
}
.map-location-circle.color3
{
    background-color: #ef9770;
}
.map-location-circle.color4
{
    background-color: #efbe84;
}
.map-location-circle.color5
{
    background-color: #efd37b;
}
.map-location-circle.color6
{
    background-color: #f2ec83;
}
.map-location-circle.color7
{
    background-color: #c7f28f;
}
.map-location-circle.color8
{
    background-color: #8feabc;
}
.map-location-circle.color9
{
    background-color: #8ce0d5;
}
.map-location-circle.color10
{
    background-color: #99e1f2;
}
.map-location-circle.color11
{
    background-color: #86aeea;
}
.map-location-circle.color12
{
    background-color: #8597ed;
}
.map-location-circle.color13
{
    background-color: #9696e2;
}
.map-location-circle.color14
{
    background-color: #917ced;
}
.map-location-circle.color15
{
    background-color: #cb9aed;
}
.map-location-circle.color16
{
    background-color: #f28bcb;
}

.map-location.E2
{
    left:60%;
    top:80%;
    z-index:80;
}
.map-location.E3
{
    left:67%;
    top:74%;
    z-index:74;
}
.map-location.E6
{
    left:68%;
    top:62%;
    z-index:62;
}
.map-location.E7
{
    left:77%;
    top:60%;
    z-index:60;
}
.map-location.E11
{
    left:53%;
    top:57%;
    z-index:57;
}
.map-location.E16
{
    left:53%;
    top:48%;
    z-index:48;
}

.map-location.N1
{
    left:88%;
    top:38%;
    z-index:38;
}
.map-location.N3
{
    left:53%;
    top:44%;
    z-index:44;
}
.map-location.N4
{
    left:62%;
    top:40%;
    z-index:40;
}
.map-location.N5
{
    left:74%;
    top:38%;
    z-index:38;
}
.map-location.N7
{
    left:33%;
    top:40%;
    z-index:40;
}
.map-location.N22
{
    left:79%;
    top:34%;
    z-index:34;
}
.map-location.N24
{
    left:76%;
    top:30%;
    z-index:30;
}
.map-location.N25
{
    left:59%;
    top:34%;
    z-index:34;
}
.map-location.N27
{
    left:57%;
    top:23%;
    z-index:23;
}

.map-location.W1
{
    left:31%;
    top:84%;
    z-index:84;
}
.map-location.W8
{
    left:35%;
    top:55%;
    z-index:44;
}
.map-location.W16
{
    left:40%;
    top:87%;
    z-index:87;
}




/* Info at right side */

#info
{
    padding-bottom:10px;
    border-bottom:1px solid #EDD1DC;
}

#type-credits
{
    font-size: 12px;
    line-height: 11px;
}

.lecture-type
{
    display:inline-block;
    width:40%;
    text-align:left;
    margin-left:10%;
    margin-top:10px;
    font-size:0px;
}
.lecture-type-right
{
    display:inline-block;
    width:40%;
    text-align:left;
    font-size:0px;
}

.lecture-type span
{
    font-size:12px;
}
.lecture-type-right span
{
    font-size:12px;
}

.lecture-type-span
{
    font-weight: bold;
    display: inline-block;
    margin-right: 4px;
    white-space: nowrap;
}
.lecture-type-span.fixed-ko
{
    width: 23px;
}
.lecture-type-span.fixed-en
{
    width: 23px;
}

.credit-text.active
{
    color:#e64c65;
}

.active-credit
{
    margin-left: 4px;
    color:#e64c65;
}

#total-credits
{
    margin-top: calc(1.4vh + 2px);
    margin-bottom: calc(1.4vh + 2px);
    text-align:center;
    font-size:0.8em;
}

.total-credit
{
    width:69px;
    width: calc(3.5vh + 34px);
    display:inline-block;
    vertical-align:top;
}

#credits>.active,
#au>.active
{
    color:#e64c65;
}

#table-scores
{
    margin-top: calc(1.4vh + 2px);
    text-align:center;
    font-size:0.8em;
}

.table-score
{
    width:69px;
    width: calc(3.5vh + 34px);
    display:inline-block;
    vertical-align:top;
}
/* ... */

